ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: argo.centralindia.cloudapp.azure.com
      http:
        paths:
          - path: /website
            pathType: Prefix
            backend:
              service:
                name: website-svc
                port:
                  number: 80
